# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  16 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Fixed a 
  traceback related to file.size and --fix, added compatability tweaks for
  xmllint.

  16 Aug 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Fixed the lock
  handling and unique_array calls.

*portage-2.0.51_pre19 (16 Aug 2004): Fixes and Public Readiness & GPG
  
  16 Aug 2004; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Add predict
  for gpg verification.

  16 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Fixed the
  lock code to use the external module.

  16 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_gpg.py: Fixed
  the writing operations and access violations.

  16 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_locks.py: Fixed
  the code so it acutally works and is used.

  16 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_md5.py: Fixed
  the lock calls.

*portage-2.0.51_pre18 (16 Aug 2004): Fixes and Public Readiness & GPG
  
  16 Aug 2004; Nicholas Jones <carpaski@gentoo.org> dolib*: Added LV's
  CONF_LIBDIR patch to help out the 32/64 bit lib migrations.
  
  16 Aug 2004; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: CONF_LIBDIR
  patch updates. Added a possible fix for the export issues in environment.

  16 Aug 2004; Nicholas Jones <carpaski@gentoo.org> prepall/lib: CONF_LIBDIR

  16 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Adjusted the
  manifest/gpg code to reduce the output on missing sigs. Changed the GPG
  homedir to the PORTAGE_GPG_DIR instead of using rsync for the keyring --
  This requires manual intervention.
